--- a/Project6_Text_EDA.ipynb
+++ b/Project6_Text_EDA.ipynb
@@ -35,15 +35,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "bKX6AwK_IxB4"
-      },
-      "source": [
-        "This is a convenient location to collect data and store it for later use"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "3eyB-NVCKT3B"
@@ -52,7 +43,7 @@
         "from pathlib import Path\n",
         "import spacy\n"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -69,7 +60,7 @@
         "!rm *.txt\n",
         "!wget https://raw.githubusercontent.com/noahgift/exploratory-data-analysis/main/hemingway-sun-also-rises.txt"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -98,17 +89,8 @@
       "source": [
         "sar_text = Path('hemingway-sun-also-rises.txt').read_text()"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "n76vEOUtK954"
-      },
-      "source": [
-        "## EDA"
-      ]
     },
     {
       "cell_type": "markdown",
@@ -116,7 +98,7 @@
         "id": "dW8XJbkwSfd_"
       },
       "source": [
-        "### Word Visualizations"
+        "### Process Text for Word Cloud"
       ]
     },
     {
@@ -130,7 +112,7 @@
         "sar_blob = TextBlob(Path('hemingway-sun-also-rises.txt').read_text())\n",
         "tags = sar_blob.tags"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -164,7 +146,7 @@
         "\n",
         "lemmatized_words = lemmatize_words(tags)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -182,7 +164,7 @@
         "nltk.download('punkt')\n",
         "!python -m textblob.download_corpora"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -231,7 +213,7 @@
         "\n",
         "no_stop_words = remove_stop(lemmatized_words, stop_words)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -247,7 +229,7 @@
         "#without stop word removal\n",
         "len(lemmatized_words)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -274,7 +256,7 @@
         "#the stop words are removed\n",
         "len(no_stop_words)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -316,7 +298,7 @@
         "plt.imshow(wordcloud, interpolation='bilinear')\n",
         "plt.axis(\"off\")"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
